# bismuth

./: Cargo.toml
assets/: cube.gltf
src/: camera.rs  lib.rs  loader.rs  main.rs  render_device.rs  texture.rs  vertex.rs
src/rendering/: camera.rs  mod.rs  renderer.rs
src/shaders/: shader.wgsl
