[package]
name = "bismuth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3"
env_logger = "0.10.1"
nalgebra = "0.32.3"
wgpu = "0.18.0"
winit = "0.28"
log = "0.4.20"
cfg-if = "1.0.0"
bytemuck = { version = "1.14.0", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
