[package]
name = "bismuth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3"
env_logger = "0.10.1"
wgpu = "0.18.0"
winit = "0.28"
log = "0.4.20"
cfg-if = "1.0.0"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
gltf = "1.4.0"
anyhow = "1.0.79"
bevy_math = "0.12.1"

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "jpeg"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
